Testing pdf generation on heroku

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,4 +1,4 @@
 Visitor Index
 <p class='pdf_exclude'>
-	<%= link_to 'Download PDF', find_social_profile_path(format: 'pdf') %>
+	<%= link_to 'Download PDF', '/visitors/index.pdf' %>
 </p>
